# computer-vision

./: LICENSE
CV final project/: CMakeLists.txt
CV final project/include/: TemplateMatching.h  svmbased.h
CV final project/src/: T1.cpp  TemplateMatching.cpp  main.cpp  svmbased.cpp  svmbased2.cpp
lab 3/: final.cpp
lab 4/: 4.cpp
lab 6/: CMakeLists.txt
lab 6/include/: ObjectDetection.h
lab 6/src/: ObjectDetection.cpp  main.cpp
